--- a/templates/video_results.html
+++ b/templates/video_results.html
@@ -64,7 +64,8 @@
             </form>
 
             <form id="email-form" class="email-form">
-                <input type="email" id="user-email" name="email" placeholder="Enter your email" required>
+                <label for="user-email">Email me:</label>
+                <input type="email" id="user-email" name="email" placeholder="example@email.com" required>
                 <button type="submit">Send Results</button>
             </form>
 
