--- a/templates/channel_results.html
+++ b/templates/channel_results.html
@@ -8,15 +8,15 @@
         <table>
             <thead>
                 <tr>
-                    <th>Title</th>
+                    <th>Channel Title</th>
                     <th>Description</th>
                 </tr>
             </thead>
             <tbody>
                 {% for result in results %}
                     <tr>
-                        <td><a href="{{ url_for('video_search', title=result.title) }}">{{ result.title }}</a></td>
-                        <td>{{ result.description }}</td>
+                        <td><a href="{{ url_for('video_search', title=result.channelTitle) }}">{{ result.channelTitle }}</a></td>
+                        <td>{{ result.channelDescription }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
