Debugging video_search.py, line 42 checkpoint. Changed "view_count" & "like_count" values from form for DataFrame. Still to add video link in return.

--- a/templates/video_results.html
+++ b/templates/video_results.html
@@ -56,8 +56,8 @@
                         </div>
                         <div class="form-group">
                             <label>Rank using:</label><br>
-                            <input type="radio" id="rank-by-views" name="views_likes" value="views" checked > Views<br>
-                            <input type="radio" id="rank-by-likes" name="views_likes" value="likes"> Likes
+                            <input type="radio" id="rank-by-views" name="views_likes" value="view_count" checked > Views<br>
+                            <input type="radio" id="rank-by-likes" name="views_likes" value="like_count"> Likes
                         </div>
                     </div>
                 </div>
